--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
 
-    <title>合成可爱明明子</title>
+    <title>合成徐楚雯</title>
 
     <!--http://www.html5rocks.com/en/mobile/mobifying/-->
     <meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1, minimum-scale=1,maximum-scale=1" />
@@ -58,12 +58,12 @@
         }
     </script> -->
 
-    <link rel="stylesheet" type="text/css" href="style-mobile.css" />
+    <link rel="stylesheet" type="text/css" href="sannaha.github.io-master/style-mobile.css" />
 
 </head>
 
 <body style="margin: 0; background: #ddd;" align="center">
-    <div style="align:center;display: none"><img src="res/share.jpg" width="10%" /></div>
+    <div style="align:center;display: none"><img src="sannaha.github.io-master/res/share.jpg" width="10%" /></div>
 
     <div id="canvasDiv" style="width:100%;height:100%;">
         <canvas id="GameCanvas" oncontextmenu="event.preventDefault()" tabindex="0"></canvas>
@@ -84,7 +84,7 @@
     </div>
 
     <div id="loadingImg" style="top:45%;width: 100%;position:absolute; ">
-        <img src="res/loading.gif" width="20%" height="20%" />
+        <img src="sannaha.github.io-master/res/loading.gif" width="20%" height="20%" />
     </div>
 
 
@@ -93,7 +93,7 @@
     <!--<div align="center" style="font-size: 10px;color: dimgrey">advertisement</div>-->
 
 
-    <script src="src/settings.js" charset="utf-8"></script>
+    <script src="sannaha.github.io-master/src/settings.js" charset="utf-8"></script>
 
     <script type="text/javascript">
         var preloader;
@@ -109,7 +109,7 @@
             //        console.log("window.navigator.language",window.navigator.language);
 
             if (window.navigator.language == "zh-CN" || window.navigator.language == "zh-cn") {
-                document.title = "合成可爱明明子";
+                document.title = "合成徐楚雯";
             } 
 
 
@@ -203,9 +203,9 @@
 
 
 
-    <script src="src/settings.js" charset="utf-8"></script>
+    <script src="sannaha.github.io-master/src/settings.js" charset="utf-8"></script>
 
-    <script src="main.js" charset="utf-8"></script>
+    <script src="sannaha.github.io-master/main.js" charset="utf-8"></script>
 
 
     <script type="text/javascript">
